# profiling-ppl

./: .env.example  README.md  check_eval.py  collections.json  list_gemini_models.py  prd.md  problem.md  pyproject.toml  requirements.txt  test_explanation.py
alembic/: env.py
alembic/versions/: 7cd5e1518503_add_explainability_fields_to_evaluation.py  9040670c79f9_add_core_pipeline_tables.py  98df73aa40fc_add_sources_column_and_cleanup_models.py  9d09dae7ccfa_profile_resolution_report.py  c7ae57ceb56b_initial_migration.py  e40abd236a45_add_found_personas_column.py
app/: celery_app.py  config.py  db.py  extractors.py  intelligence.py  llm.py  logger.py  main.py  models.py  profile_resolution.py  schemas.py  scoring.py  scoring_engine.py  scrapers.py  search_provider.py  service.py  signal_extractor.py  tasks.py
app/agents/: active_disambiguation_agent.py  article.py  base.py  core_agent.py  explanation.py  follow_up_agent.py  identity.py  identity_resolution_agent.py  info_extraction_agent.py  profile_enrichment_agent.py  profile_research_agent.py  profile_seed_resolver_agent.py  query_agent.py  signal_extraction_agent.py  summary_agent.py  tools.py
app/collectors/: base.py  github_collector.py  linkedin_collector.py  web_search_collector.py
app/llm/: __init__.py  base.py  claude_client.py  factory.py  gemini_client.py  groq_client.py  openai_client.py  tools.py
app/services/: confidence_service.py  page_fetcher.py  search_service.py  source_normalizer.py
